@@ -1132,6 +1132,7 @@ ConcerneEleve VARCHAR(10) NOT NULL,
 ConcerneResponsable VARCHAR(10) NOT NULL,
 SaisieScol VARCHAR(10) NOT NULL,
 SaisieCpe VARCHAR(10) NOT NULL,
+SaisiePP VARCHAR(10) NOT NULL,
 PRIMARY KEY (id)
 ) ENGINE=MyISAM CHARACTER SET utf8 COLLATE utf8_general_ci;
 
